--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <!--grant location screen 1 -->
             <div class="grant-location-container sub-container">
-                <img src="./location.png" width="80px" height="80px" loading="lazy" alt="">
+                <img src="location.png" width="80px" height="80px" loading="lazy" alt="">
                 <p>Grant Location Access</p>
                 <p>Allow Access to get weather information</p>
                 <button class="btn" data-grantAcess>Grant Access</button>
@@ -41,7 +41,7 @@
 
                 <!-- loading screen 4 -->
                 <div class="loading-container">
-                    <img src="./loading.gif" alt="" width="150px" height="150px">
+                    <img src="loading.gif" alt="" width="150px" height="150px">
                     <p>Loading</p>
                 </div>
 
@@ -66,19 +66,19 @@
                     <div class="paremeter-container">
                         <!-- windspeed -->
                         <div class="parameter">
-                            <img src="./wind.png" alt="">
+                            <img src="wind.png" alt="">
                             <p class="weather-parameter">Windspeed</p>
                             <p data-windspeed></p>
                         </div>
                         <!-- humidity -->
                         <div class="parameter">
-                            <img src="./humidity.png" alt="">
+                            <img src="humidity.png" alt="">
                             <p class="weather-parameter">Humidity</p>
                             <p data-humidity></p>
                         </div>
                         <!-- cloud -->
                         <div class="parameter">
-                            <img src="./cloud.png" alt="">
+                            <img src="cloud.png" alt="">
                             <p class="weather-parameter" >Clouds</p>
                             <p data-cloudiness></p>
                         </div>
@@ -88,7 +88,7 @@
 
                 <!-- screen 5 when city search not found -->
                 <div class="not-found"  not-found>
-                    <img src="./not-found.png" height="300px" width="300px" alt="" >
+                    <img src="not-found.png" height="300px" width="300px" alt="" >
                 </div>
         </div>
     </div>
