--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <form class="form-container sub-container" data-searchForm>
                     <input type="text" placeholder="Search for City..." data-searchInput>
                     <button class="btn" type="submit">
-                        <img src="./search.png" alt="" height="20px" width="20px" loading="lazy">
+                        <img src="search.png" alt="" height="20px" width="20px" loading="lazy">
                     </button>
                 </form>
 
